--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ jobs:
             options: -u postgres
         env:
             LOGNAME: postgres
+            REALHOME: /home/postgres
         steps:
         #- run: id; pwd; ls -al; env
         - name: make working and temporary directories world-readable/writable
@@ -22,21 +23,16 @@ jobs:
           # needs to remain writable by the github actions user as well, as it
           # writes 'event.json' files there for each step.
           run: sudo chmod -R a+rwX . "$RUNNER_TEMP"
-        - name: Checkout Repository
-          uses: actions/checkout@v3
-          with:
-            ref: ${{ github.event.pull_request.head.sha }}
-            set-safe-directory: false
         - name: cache
-          uses: actions/cache@v3
+          uses: actions/cache@v2
           with:
-              path: target
-              key: foo-9
-              #restore-keys: foo-
+              path: $REALHOME/timescaledb-toolkit/target
+              key: foo-11
+              restore-keys: foo-
         - name: ls after cache restore
-          run: pwd; ls -a; for i in *; do ls -l $i; cat $i; done
-        - run: '[ -e stamp ] || date > stamp'
-        - run: '[ -e stamp2 ] || date > stamp2'
+          run: 'cd $REALHOME/timescaledb-toolkit; for i in target/*; do [ -e $i ] || continue; ls -l $i; cat $i; done'
+        - run: 'cd $REALHOME/timescaledb-toolkit; mkdir -p target; cd target; [ -e stamp ] || date > stamp'
+        - run: 'cd $REALHOME/timescaledb-toolkit; mkdir -p target; cd target; [ -e stamp2 ] || date > stamp2'
         - run: find $RUNNER_TEMP -print0 | xargs -0 ls -dl
         - name: ls after work
           run: ls -al
