--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - name: Setup core dump collection
         run: |
+          exec 2>&1
           set -x
           mkdir $HOME/cores
           cat /proc/sys/kernel/core_pattern || :
@@ -17,13 +18,16 @@ jobs:
 
       - name: Generate a core dump
         run: |
+          exec 2>&1
+          ulimit -c || :
+          ulimit -c unlimited
           sleep 60 &
           kill -11 $!
           find . -name 'core.*' || :
-          find ~ -name 'core.*' || :
+          find ~/cores
 
       - name: Upload core dumps
         uses: actions/upload-artifact@v3.1.2
         with:
           name: core-dumps
-          path: $HOME/cores
+          path: ~/cores
